--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -2,7 +2,7 @@
 grails:
     profile: web
     codegen:
-        defaultPackage: linksharing
+        defaultPackage: com.ttn.linksharing
     gorm:
         reactor:
             # Whether to translate GORM events into Reactor events
@@ -88,18 +88,28 @@ hibernate:
         queries: false
         use_second_level_cache: false
         use_query_cache: false
+
 dataSource:
-    pooled: true
+#    pooled: true
     jmxExport: true
-    driverClassName: org.h2.Driver
-    username: sa
-    password: ''
+#    driverClassName: org.h2.Driver
+#    username: sa
+#    password: ''
+
+    pooled: true
+
+    driverClassName: "com.mysql.jdbc.Driver"
+    username: "root"
+    password: "igdefault"
 
 environments:
     development:
         dataSource:
-            dbCreate: create-drop
-            url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+#            dbCreate: create-drop
+             dbCreate: update
+#            url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+             url: "jdbc:mysql://localhost/linksharing"
+
     test:
         dataSource:
             dbCreate: update
@@ -126,3 +136,5 @@ environments:
                 testOnReturn: false
                 jdbcInterceptors: ConnectionState
                 defaultTransactionIsolation: 2 # TRANSACTION_READ_COMMITTED
+server:
+    contextPath: /sumit
