--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -97,7 +97,7 @@ dataSource:
 #    password: ''
 
     pooled: true
-
+    dialect: org.hibernate.dialect.MySQLDialect
     driverClassName: "com.mysql.jdbc.Driver"
     username: "root"
     password: "igdefault"
@@ -105,10 +105,11 @@ dataSource:
 environments:
     development:
         dataSource:
-#            dbCreate: create-drop
-             dbCreate: update
+             dbCreate: create-drop
+#             dbCreate: update
 #            url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
-             url: "jdbc:mysql://localhost/linksharing"
+             url: jdbc:mysql://localhost/linksharing
+#             logSql: true
 
     test:
         dataSource:
