--- a/build.gradle
+++ b/build.gradle
@@ -62,7 +62,7 @@ dependencies {
 }
 
 bootRun {
-    jvmArgs('-Dspring.output.ansi.enabled=always')
+    jvmArgs=["-Xdebug", "-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005",'-Dspring.output.ansi.enabled=always']
     addResources = true
     String springProfilesActive = 'spring.profiles.active'
     systemProperty springProfilesActive, System.getProperty(springProfilesActive)
