--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,8 @@ dependencies {
     testRuntime "org.seleniumhq.selenium:selenium-chrome-driver:2.47.1"
     testRuntime "org.seleniumhq.selenium:selenium-htmlunit-driver:2.47.1"
     testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
+    compile 'org.grails.plugins:grails-console:2.1.1'
+//    runtime 'org.grails.plugins:grails-console:2.1.1'
 }
 
 bootRun {
