--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -138,4 +138,4 @@ environments:
                 jdbcInterceptors: ConnectionState
                 defaultTransactionIsolation: 2 # TRANSACTION_READ_COMMITTED
 server:
-    contextPath: /sumit
+    contextPath: /Linksharing
