--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
     compile 'org.grails.plugins:grails-console:2.1.1'
 //    runtime 'org.grails.plugins:grails-console:2.1.1'
+    compile 'org.grails.plugins:mail:2.0.0'
 }
 
 bootRun {
