--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -28,6 +28,17 @@ endpoints:
 
 ---
 grails:
+  mail:
+    host: "smtp.gmail.com"
+    port: 465
+    username: "sumitchaudhary39@gmail.com"
+    password: "sumit12ka4"
+    props:
+      mail.smtp.auth: "true"
+      mail.smtp.socketFactory.port: "465"
+      mail.smtp.socketFactory.class: "javax.net.ssl.SSLSocketFactory"
+      mail.smtp.socketFactory.fallback: "false"
+
     mime:
         disable:
             accept:
@@ -78,6 +89,8 @@ grails:
                 scriptlets: html
                 taglib: none
                 staticparts: none
+
+
 endpoints:
     jmx:
         unique-names: true
@@ -105,8 +118,8 @@ dataSource:
 environments:
     development:
         dataSource:
-             dbCreate: create-drop
-#             dbCreate: update
+#             dbCreate: create-drop
+             dbCreate: update
 #            url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
              url: jdbc:mysql://localhost/linksharing
 #             logSql: true
@@ -138,4 +151,4 @@ environments:
                 jdbcInterceptors: ConnectionState
                 defaultTransactionIsolation: 2 # TRANSACTION_READ_COMMITTED
 server:
-    contextPath: /Linksharing
+    contextPath: /sumit
