--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -32,7 +32,7 @@ grails:
     host: "smtp.gmail.com"
     port: 465
     username: "sumitchaudhary39@gmail.com"
-    password: "sumit12ka4"
+    password: "sumit@1602@#1"
     props:
       mail.smtp.auth: "true"
       mail.smtp.socketFactory.port: "465"
